feat: added search param; updated migrations; updated city search
